fix popup and README

--- a/blocks/popup/__forms/popup__forms.css
+++ b/blocks/popup/__forms/popup__forms.css
@@ -1,4 +1,4 @@
-.popup__forms {
+/*.popup__forms {
     display: flex;
     flex-direction: column;
     max-width: 358px;
@@ -17,4 +17,4 @@
         margin-top: 75px;
         margin-left: 22px;
     }
-}
+}*/
