--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,5 +1,30 @@
 .popup__close-button {
+    box-sizing: border-box;
+    position: absolute;
     background-color: white;
+    background: url("../../../images/Close-Icon.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     border: 0;
     padding: 0;
 }
+
+@media screen and (min-width: 320px) {
+    .popup__close-button {
+      width: 20px;
+      height: 20px;
+      top: -36px;
+      right: 0;
+    }
+  }
+  
+  @media screen and (min-width: 1024px) {
+    .popup__close-button {
+      width: 32px;
+      height: 32px;
+      top: -39px;
+      right: -41px;
+    }
+  }
+  
