--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,22 +1,24 @@
 .popup__container {
-    position: fixed;
+    display: flex;
+    flex-direction: column;
     background-color: white;
     border-radius: 10px;
-    min-width: 430px;
-    min-height: 330px;
-    top: 50%;
-    left: 50%;
+    position: relative;
     z-index: 10;
-    margin-left: calc(430px / -2);
-    margin-top: calc(330px / -2);
+    box-sizing: border-box;
+    box-shadow: 0 0 25px rgba(0, 0, 0, .15);
 }
 
-@media screen and (min-width: 320px) and (max-width: 1279px) {
+@media screen and (min-width: 320px) {
     .popup__container {
-        min-height: 322px;
-        min-width: 282px;
-        margin-left: calc(282px / -2);
-        margin-top: calc(322px / -2);
-        margin: 0 auto;
+        width: 282px;
+        padding: 25px 22px 25px 22px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .popup__container {
+        width: 430px;
+        padding: 34px 36px 37px 36px;
     }
 }
