--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -1,13 +1,12 @@
 .popup__save-button {
-    min-width: 358px;
-    min-height: 50px;
+    width: 100%;
+    height: 50px;
     background-color: black;
     color: white;
-    line-height: 22px;
-    font-size: 18px;
-    border: none;
+    font-weight: 400;
+    border: 0;
+    outline: none;
     border-radius: 2px;
-    margin-top: 48px
 }
 
 .popup__save-button:hover {
@@ -15,11 +14,18 @@
     cursor: pointer;
 }
 
-@media screen and (min-width: 320px) and (max-width: 1279px) {
+@media screen and (min-width: 320px) {
     .popup__save-button {
-        min-width: 238px;
-        line-height: 17px;
-        font-size: 14px;
-        margin-top: 15px;
+      padding: 14px 0;
+      font-size: 14px;
+      line-height: 17px;
     }
-}
+  }
+  
+  @media screen and (min-width: 1024px) {
+    .popup__save-button {
+      padding: 14px 0 18px 0;
+      font-size: 18px;
+      line-height: 22px;
+    }
+  }
