--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,19 +1,19 @@
 .popup__title {
-    max-width: 358px;
-    text-align: start;
-    color: black;
     font-weight: 900;
-    line-height: 29px;
-    font-size: 24px;
-    padding-top: 34px;
-    margin: 0 auto;
-    margin-left: 36px;
+    color: black;
+    margin: 0;
 }
 
-@media screen and (min-width: 320px) and (max-width: 1279px) {
+@media screen and (min-width: 320px) {
     .popup__title {
-        line-height: 22px;
-        font-size: 18px;
-        margin-left: 22px;
+      font-size: 18px;
+      line-height: 22px;
     }
-}
+  }
+  
+  @media screen and (min-width: 1024px) {
+    .popup__title {
+      font-size: 24px;
+      line-height: 29px;
+    }
+  }
