--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,13 +1,13 @@
 .popup {
     display: none;
-}
-.popup::before {
-    content: '';
-    background: black;
-    position: fixed;
-    left: 0;
-    top: 0;
+    display: flex;
+    align-items: center;
+  justify-content: center;
     width: 100%;
     height: 100%;
-    opacity: 0.4;
+    background: rgba(0, 0, 0, .5);
+    position: fixed;
+    z-index: 2;
+    left: 0;
+    top: 0;
 }
