--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -9,7 +9,10 @@
     border: 0;
     padding: 0;
 }
-
+.popup__close-button:hover {
+    cursor: pointer;
+    opacity: 0.8;
+}
 @media screen and (min-width: 320px) {
     .popup__close-button {
       width: 20px;
