--- a/blocks/popup/__form-line/popup__form-line.css
+++ b/blocks/popup/__form-line/popup__form-line.css
@@ -6,13 +6,7 @@
     border: 0px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     outline: none;
-    margin-top: 30px;
+    margin-bottom: 30px;
     padding: 0 0 7px 0;
 }
 
-@media screen and (min-width: 1024px) {
-    .popup__form-line {
-        padding: 0 0 7px 0;
-        margin-top: 30px;
-    }
-}
