--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -2,7 +2,7 @@
     width: 150px;
     justify-self: end;
     aspect-ratio: 3/1;
-    background-color: black;
+    background-color: transparent;
     border: 2px solid white;
     border-radius: 2px;
     background-image: url("../../../images/Add-Button.svg");
@@ -15,13 +15,14 @@
 }
 .profile__add-button:hover {
     cursor: pointer;
-    opacity: .8;
+    opacity: .6;
 }
 @media screen and (min-width: 320px) and (max-width: 1279px) {
     .profile__add-button {
         width: 282px;
         height: 50px;
         margin-top: 36px;
+        background-size: 16px;
     }
 }
 
