--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -2,7 +2,7 @@
     width: 24px;
     aspect-ratio: 1/1;
     border: 1px solid white;
-    background-color: black;
+    background-color: transparent;
     background-image: url("../../../images/Edit-Button.svg");
     background-size: 10px;
     background-repeat: no-repeat;
@@ -10,7 +10,7 @@
     padding: 0;
 }
 .profile__edit-button:hover {
-    opacity: .8;
+    opacity: .6;
     cursor: pointer;
 }
 @media screen and (min-width: 320px) and (max-width: 1279px) {
