--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -8,6 +8,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 26px 0 36px;
+        margin: 26px 0 0;
     }
 }
