--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,7 +1,7 @@
 .popup {
   display: none;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
@@ -10,10 +10,4 @@
   z-index: 2;
   left: 0;
   top: 0;
-  padding-top: 195px;
-}
-@media  screen and (max-width: 320px) {
-  .popup {
-    padding-top: 123px;
-  }
 }
