--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -3,8 +3,11 @@
     flex-direction: column;
     background-color: white;
     border-radius: 10px;
-    position: relative;
     z-index: 10;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     box-sizing: border-box;
     box-shadow: 0 0 25px rgba(0, 0, 0, .15);
 }
