--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -15,6 +15,7 @@
 @media screen and (min-width: 320px) {
     .popup__container {
         width: 282px;
+        height: 322px;
         padding: 25px 22px 25px 22px;
     }
 }
@@ -22,6 +23,7 @@
 @media screen and (min-width: 1024px) {
     .popup__container {
         width: 430px;
+        height: 330px;
         padding: 34px 36px 37px 36px;
     }
 }
