--- a/blocks/popup/__form-input/popup__form-input.css
+++ b/blocks/popup/__form-input/popup__form-input.css
@@ -1,7 +1,7 @@
 .popup__form-input {
     border: 0;
     margin: 0;
-    padding: 0;
+    padding-bottom: 20px;
 }
 
 @media screen and (min-width: 320px) {
