--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -4,10 +4,7 @@
     background-color: white;
     border-radius: 10px;
     z-index: 10;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: relative;
     box-sizing: border-box;
     box-shadow: 0 0 25px rgba(0, 0, 0, .15);
 }
@@ -15,7 +12,6 @@
 @media screen and (min-width: 320px) {
     .popup__container {
         width: 282px;
-        height: 322px;
         padding: 25px 22px 25px 22px;
     }
 }
@@ -23,7 +19,6 @@
 @media screen and (min-width: 1024px) {
     .popup__container {
         width: 430px;
-        height: 330px;
         padding: 34px 36px 37px 36px;
     }
 }
