--- a/blocks/profile/__username/profile__username.css
+++ b/blocks/profile/__username/profile__username.css
@@ -1,21 +1,43 @@
 .profile__username {
-    max-width: 295px;
-    overflow: hidden;
-    line-height: 48px;
     font-weight: 500;
-    font-size: 42px;
-    color: white;
-    font-style: normal;  
+    color: #fff;
+    margin: 0;
+    max-width: 294px;
     text-overflow: ellipsis;
     white-space: nowrap;
-    margin: 0;
-}
-
-@media screen and (min-width: 320px) and (max-width: 1279px) {
+    overflow: hidden;
+  }
+  
+  @media screen and (min-width: 320px) {
     .profile__username {
-        max-width: 235px;
-        line-height: 33px;
-        font-size: 27px;
-        margin-left: 28px;
+      font-size: 27px;
+      line-height: 33px;
+      padding-right: 10px;
+      max-width: 189px;
     }
-}
+  }
+  
+  @media screen and (min-width: 425px) {
+    .profile__username {
+      font-size: 30px;
+      max-width: 210px;
+    }
+  }
+  
+  @media screen and (min-width: 768px) {
+    .profile__username {
+      font-size: 38px;
+      line-height: 42px;
+      padding-right: 12px;
+      max-width: 265px;
+    }
+  }
+  
+  @media screen and (min-width: 1024px) {
+    .profile__username {
+      font-size: 42px;
+      line-height: 48px;
+      padding-right: 18px;
+      max-width: 294px;
+    }
+  }
