--- a/blocks/forms/__personal-info/forms__personal-info.css
+++ b/blocks/forms/__personal-info/forms__personal-info.css
@@ -1,11 +1,11 @@
-.popup__form-input {
+.forms__personal-info{
     border: 0;
     margin: 0;
     padding-bottom: 20px;
 }
 
 @media screen and (min-width: 320px) {
-    .popup__form-input {
+    .forms__personal-info {
         padding-bottom: 15px;
         padding-top: 75px;
         padding-left: 0;
@@ -14,7 +14,7 @@
 }
 
 @media screen and (min-width: 1024px) {
-    .popup__form-input {
+    .forms__personal-info {
         padding-bottom: 22px;
         padding-top: 50px;
     }
