--- a/blocks/forms/__title/forms__title.css
+++ b/blocks/forms/__title/forms__title.css
@@ -1,18 +1,18 @@
-.popup__title {
+.forms__title {
     font-weight: 900;
     color: black;
     margin: 0;
 }
 
 @media screen and (min-width: 320px) {
-    .popup__title {
+    .forms__title {
       font-size: 18px;
       line-height: 22px;
     }
   }
   
   @media screen and (min-width: 1024px) {
-    .popup__title {
+    .forms__title {
       font-size: 24px;
       line-height: 29px;
     }
